# High-Dimensional-Neural-Network-Potential

./: CMakeLists.txt  README.md
example/: input.xyz
src/: precision.f90
src/atoms/: atomicStructure.f90  inertia.f90  pointsets.f90
src/configuration/: parameterParser.f90  parameters.f90
src/constants/: constants.f90
src/math/: assignmentProblem.f90  interpolation.f90  linalg.f90  mathUtil.f90  quaternions.f90  random.f90
src/neuralnetwork/: neuralNetworks.f90  nnTest.f90
src/potentials/: MaPbI3Example.f90  globalHdnnps.f90  hdnnpExample.f90  hdnnps.f90  neighborLists.f90  symmetryFunctions.f90
src/util/: argumentParser.f90  doubleLinkedList.f90  dynamicArray.f90  dynamicIntArray.f90  sortTest.f90  sorting.f90  util.f90
